Add dep for netlify plugin

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-live": "^2.2.3"
+  },
+  "devDependencies": {
+    "jimp": "^0.16.1"
   }
 }
