--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-live": "^2.2.3"
   },
   "devDependencies": {
-    "jimp": "^0.16.1"
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.8",
+    "jimp": "^0.16.1",
+    "typescript": "^4.3.2"
   }
 }
