--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.5",
+    "extract-react-types-loader": "^0.3.17",
     "next": "10.0.5",
+    "pretty-proptypes": "^1.2.0",
     "prism-react-renderer": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
